Add the missing "</head>"

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="couple.css">
     <script src="couple.js"></script>
+  </head>
   <body>
     <webview src="https://app.couple.me/" ></webview>
   </body>
